--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,8 @@
 spring:
+  profiles:
+    active: ${mcp.transport:default}
   application:
     name: openapi-diff-mcp-server
-  main:
-    # NOTE: You must disable the banner and the console logging
-    # to allow the STDIO transport to work !!!
-    banner-mode: off
   ai:
     mcp:
       server:
